styling and font changes

--- a/Public/index.html
+++ b/Public/index.html
@@ -74,7 +74,7 @@
             class="slider round"></span></input>
         </label>
         <label class="switch" id='slideEv'>
-          <input type='checkbox' checked='true' id='toggleEVCharge'>EV Charge Stations<span
+          <input type='checkbox' checked='true' id='toggleEVCharge'>Electric Vehicle Charge Stations<span
             class="slider round"></span></input>
         </label>
         <label class="switch" id='slideMc'>
