increase walking emoji font size

--- a/Public/index.html
+++ b/Public/index.html
@@ -155,8 +155,7 @@
   <div id="infowindow-content">
     <!-- <img src="" width="16" height="16" id="place-icon"> -->
     <span id="place-name" class="title"></span><br>
-    <span id="walk-label">Circle ≈ 3 min 🚶</span>
-
+    <div id=walk-span><span id="walk-label">Circle ≈ 3 min </span><span id="walk-emoji">🚶</span></div>
   </div>
   <!-- The Firebase scripts MUST be before the src for index.js -->
   <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
