--- a/Public/index.html
+++ b/Public/index.html
@@ -30,8 +30,9 @@
         <p>Please note – this map should be used for reference purposes only. Refer to parking signage for official policy and regulations.</p>
         <p>Parking rates are listed in $ per hour unless otherwise noted.</p>
         <p>Please submit questions or comments at ParkBurlington.com.</p>
-        <button class="disclaimer-accept">Okay</button>
+        <div id="disclaimer-accept"><button class="disclaimer-accept">Okay</button></div>
       </div>
+      
     </div>
 
   </div>
