resolved toggle switch animation issue

--- a/Public/index.html
+++ b/Public/index.html
@@ -137,73 +137,73 @@
       <div class='menu'>
         <label class="switch" id='slideHc'>
           <input type='checkbox' checked='true' id='toggleHandicap'>
-          <span class="toggle-label">Handicapped</span>
+          Handicappe
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideMg'>
           <input type='checkbox' checked='true' id='toggleMunicipalGarages'>
-          <span class="toggle-label">Municipal Garages</span>
+          Municipal Garages
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slidePg'>
           <input type='checkbox' checked='true' id='togglePrivateGarages'>
-          <span class="toggle-label">Private Garages</span>
+          Private Garages
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideSm'>
           <input type='checkbox' checked='true' id='toggleSmartMeters'>
-          <span class="toggle-label">Smart Meters</span>
+          Smart Meters
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideBl'>
           <input type='checkbox' checked='true' id='toggleBlueTopMeters'>
-          <span class="toggle-label">Blue Top Meters - 3 hours max</span>
+          Blue Top Meters - 3 hours max
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideBr'>
           <input type='checkbox' checked='true' id='toggleBrownTopMeters'>
-          <span class="toggle-label">Brown Top Meters - 9 hours max</span>
+          Brown Top Meters - 9 hours max
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideYl'>
           <input type='checkbox' checked='true' id='toggleYellowTopMeters'>
-          <span class="toggle-label">Yellow Top Meters - 30 min max</span>
+         Yellow Top Meters - 30 min max
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideEv'>
           <input type='checkbox' checked='true' id='toggleEVCharge'>
-          <span class="toggle-label">Electric Vehicle Charge Stations</span>
+          Electric Vehicle Charge Stations
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideMc'>
           <input type='checkbox' checked='true' id='toggleMotorcycle'>
-          <span class="toggle-label">Motorcycle</span>
+          Motorcycle
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideBu'>
           <input type='checkbox' checked='true' id='toggleBusLargeVehicle'>
-          <span class="toggle-label">Bus & Large Vehicle</span>
+          Bus & Large Vehicle
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideRe'>
           <input type='checkbox' checked='true' id='toggleResidential'>
-          <span class="toggle-label">Residential</span>
+          Residential
           <span class="slider round"></span>
           </input>
         </label>
         <label class="switch" id='slideLu'>
           <input type='checkbox' checked='true' id='toggleLoadingUnloading'>
-          <span class="toggle-label">Loading/Unloading</span>
+          Loading/Unloading
           <span class="slider round"></span>
           </input>
         </label>
