fixed handicapped filter typo

--- a/Public/index.html
+++ b/Public/index.html
@@ -137,7 +137,7 @@
       <div class='menu'>
         <label class="switch" id='slideHc'>
           <input type='checkbox' checked='true' id='toggleHandicap'>
-          Handicappe
+          Handicapped
           <span class="slider round"></span>
           </input>
         </label>
