update motorcycle and ev icons

--- a/Public/index.html
+++ b/Public/index.html
@@ -142,7 +142,7 @@
         <div class="legend-item">
         <span class="legend-item-name">Residential Permit</span><div class="legend-item-line" id="residential-icon"></div></div>
         <div class="legend-item">
-        <span class="legend-item-name">Motorcycle</span><div class="legend-item-line" id="motorcycle-icon"></div></div>
+        <span class="legend-item-name">Motorcycle</span><div class="legend-item-icon" id="motorcycle-icon"><img src="images/motorcycling.png" alt="motorcycle-icon" height= "20px"; width="20px;"></div></div>
         <div class="legend-item">
         <span class="legend-item-name">Bus/Large Vehicle</span><div class="legend-item-line" id="bus-icon"></div></div>
         <div class="legend-item">
